Change from string -> EntityType Instead